--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,5 +2,5 @@ project(ceng391_02T CXX)
 
 set(CMAKE_BUILD_TYPE Debug)
 
-add_executable(image-test image.cc image_test.cc)
+add_executable(image-test image.cc image_test.cc buffer.cc filter.cc)
 
